# zer0dex

./: .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  llms.txt  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml
assets/: preview-source.txt  preview-spec.md
src/zer0dex/: cli.py
tests/: test_cli.py  test_seed.py  test_server.py
