[project]
name = "zer0dex"
version = "0.0.9"
description = "Dual-layer memory for AI agents. Compressed index + vector store. 91% recall, 70ms, $0/month."
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.11"
authors = [
    { name = "Rolando Bosch", email = "rbosch@hermes-labs.ai" },
]
keywords = ["rag", "memory", "ai-agents", "llm", "vector-store", "mem0"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "mem0ai>=0.1.0",
    "chromadb>=1.0.0",
]

[project.optional-dependencies]
dev = ["pytest>=7.0"]

[project.urls]
Homepage = "https://github.com/roli-lpci/zer0dex"
Documentation = "https://hermes-labs.ai/zer0dex"
Repository = "https://github.com/roli-lpci/zer0dex"
Issues = "https://github.com/roli-lpci/zer0dex/issues"

[project.scripts]
zer0dex = "zer0dex.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-dir]
"" = "src"

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

