[project]
name = "zer0dex"
version = "0.0.9"
description = "Local dual-layer memory for AI agents using a compressed index plus vector retrieval."
readme = "README.md"
license = {text = "Apache-2.0"}
requires-python = ">=3.11"
authors = [
    {name = "Rolando Bosch"},
]
keywords = ["agent-memory", "persistent-memory", "local-first", "rag", "memory", "vector-store"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "mem0ai>=0.1.0",
    "chromadb>=1.0.0",
]

[project.optional-dependencies]
dev = ["pytest>=9.0.3"]

[project.urls]
Homepage = "https://github.com/hermes-labs-ai/zer0dex"
Documentation = "https://github.com/hermes-labs-ai/zer0dex#readme"
Repository = "https://github.com/hermes-labs-ai/zer0dex"
Issues = "https://github.com/hermes-labs-ai/zer0dex/issues"
Changelog = "https://github.com/hermes-labs-ai/zer0dex/blob/main/CHANGELOG.md"

[project.scripts]
zer0dex = "zer0dex.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-dir]
"" = "src"

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"
